[gd_scene load_steps=34 format=3 uid="uid://bbvjvjd6c7l7f"]

[ext_resource type="Script" uid="uid://cred5nejrysws" path="res://Assets/Scenes/Enemies Scene/KintamaBoss/kintama.gd" id="1_uv04w"]
[ext_resource type="Texture2D" uid="uid://bn7h4rakpchb4" path="res://Assets/sprites/objects type shi/Explotions/explotion-d.png" id="2_an5kn"]
[ext_resource type="Texture2D" uid="uid://rn36kb61klai" path="res://Assets/sprites/enemies/Kintama/fly_kintama.png" id="3_dvsif"]
[ext_resource type="Texture2D" uid="uid://02vwqs6au50h" path="res://Assets/sprites/enemies/Kintama/idle_kintama.png" id="4_tqsqa"]
[ext_resource type="Texture2D" uid="uid://cym7prkfwv3ui" path="res://Assets/sprites/enemies/Kintama/walk_kintama.png" id="5_py7cc"]
[ext_resource type="FontFile" uid="uid://dhhjcp1rxp6gj" path="res://Assets/Fonts/minecraft_font.ttf" id="6_dvsif"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ngrs"]
atlas = ExtResource("2_an5kn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy1y5"]
atlas = ExtResource("2_an5kn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsw71"]
atlas = ExtResource("2_an5kn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0bj8"]
atlas = ExtResource("2_an5kn")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mqhg"]
atlas = ExtResource("2_an5kn")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_52end"]
atlas = ExtResource("2_an5kn")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mukwt"]
atlas = ExtResource("2_an5kn")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q73jj"]
atlas = ExtResource("2_an5kn")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kul0k"]
atlas = ExtResource("2_an5kn")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7soyj"]
atlas = ExtResource("2_an5kn")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_phayi"]
atlas = ExtResource("2_an5kn")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hgac"]
atlas = ExtResource("2_an5kn")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ndmr"]
atlas = ExtResource("3_dvsif")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8tx2"]
atlas = ExtResource("3_dvsif")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjpxk"]
atlas = ExtResource("3_dvsif")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc18k"]
atlas = ExtResource("3_dvsif")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yj3s"]
atlas = ExtResource("4_tqsqa")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aai6c"]
atlas = ExtResource("4_tqsqa")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh4bs"]
atlas = ExtResource("5_py7cc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0p0i"]
atlas = ExtResource("5_py7cc")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gqex"]
atlas = ExtResource("5_py7cc")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1bfb"]
atlas = ExtResource("5_py7cc")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_spx8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ngrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy1y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsw71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0bj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mqhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52end")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mukwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q73jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kul0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7soyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phayi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hgac")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ndmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8tx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjpxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc18k")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yj3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aai6c")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh4bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0p0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gqex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1bfb")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_go24e"]
radius = 41.231056

[sub_resource type="CircleShape2D" id="CircleShape2D_ojd21"]
radius = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_an5kn"]
radius = 498.40146

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqsqa"]
bg_color = Color(0.80784315, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="Kintama" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 9
script = ExtResource("1_uv04w")
fly_speed = 300.0
attack_duration = 1.5
attack_cooldown = 3.0
max_health = 400

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_spx8q")
animation = &"fly"
frame_progress = 0.89696145

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_go24e")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy_hitbox"]]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_ojd21")
debug_color = Color(0.85418147, 3.778264e-06, 7.70092e-07, 0.41960785)

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_an5kn")
debug_color = Color(0.6745098, 0, 0.54901963, 0.1764706)

[node name="WallCheck" type="RayCast2D" parent="."]
target_position = Vector2(45, 0)

[node name="FloorCheck" type="RayCast2D" parent="."]
target_position = Vector2(16, 56)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -62.0
offset_top = -77.0
offset_right = 62.0
offset_bottom = -65.0
theme_override_styles/fill = SubResource("StyleBoxFlat_tqsqa")
max_value = 400.0
value = 400.0
show_percentage = false

[node name="HealthBarNumber" type="Label" parent="."]
offset_left = -35.0
offset_top = -112.0
offset_right = 34.0
offset_bottom = -82.0
theme_override_fonts/font = ExtResource("6_dvsif")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
